force-app/main/default/objects/COGS_Category_Scenario__c/COGS_Category_Scenario__c.object-meta.xml
<CustomObject>
    <description>A COGS Category scenario defines the key values for PCOGS calculation within that category and its timeframe.</description>
    <label>COGS Category Scenario</label>
    <nameField>
        <label>COGS Scenarios Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>COGS Category Scenarios</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>