force-app/main/default/objects/COGS_Category_Scenario__c/fields/Base_Quarter__c.field-meta.xml
<CustomField>
    <fullName>Base_Quarter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This quarter defines the start of the whole scenario</description>
    <label>Base Quarter</label>
    <referenceTo>COGS_Quarter__c</referenceTo>
    <relationshipLabel>COGS Category Scenarios</relationshipLabel>
    <relationshipName>COGS_Category_Scenarios</relationshipName>
    <type>Lookup</type>
</CustomField>