force-app/main/default/objects/COGS_Category_Scenario__c/fields/COGS_Category__c.field-meta.xml
<CustomField>
    <fullName>COGS_Category__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>COGS Category</label>
    <referenceTo>COGS_Category__c</referenceTo>
    <relationshipLabel>COGS Category Scenarios</relationshipLabel>
    <relationshipName>COGS_Category_Scenarios</relationshipName>
    <type>Lookup</type>
</CustomField>