force-app/main/default/objects/COGS_Category_Scenario__c/fields/Last_COGS_Publish__c.field-meta.xml
<CustomField>
    <fullName>Last_COGS_Publish__c</fullName>
    <label>Last COGS Publish</label>
    <type>DateTime</type>
</CustomField>