force-app/main/default/objects/COGS_Category_Scenario__c/fields/Scenario_Owner__c.field-meta.xml
<CustomField>
    <fullName>Scenario_Owner__c</fullName>
    <description>u-blox user who created and own this scenario</description>
    <inlineHelpText>u-blox user who created and own this scenario</inlineHelpText>
    <label>Scenario Owner</label>
    <length>64</length>
    <type>Text</type>
</CustomField>