force-app/main/default/objects/COGS_Category_Scenario__c/fields/Time_Factor__c.field-meta.xml
<CustomField>
    <fullName>Time_Factor__c</fullName>
    <label>Time Factor</label>
    <precision>10</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>