force-app/main/default/objects/COGS_Category_Scenario__c/fields/Volume_Factor__c.field-meta.xml
<CustomField>
    <fullName>Volume_Factor__c</fullName>
    <label>Volume Factor</label>
    <precision>10</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>