force-app/main/default/objects/COGS_Category_Scenario__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>COGS_Category__c</columns>
    <columns>Base_Quarter__c</columns>
    <columns>Scenario_Owner__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>